--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
         <header class="header">
             <a href="#" class="header__logo">
-                <img src="./images/header/logo.svg" alt="" class="header__logo-img">
+                <img src="./images/header/logo.svg" alt="Логотип сайта" class="header__logo-img">
             </a>
         </header>
         <main class="main">
@@ -28,42 +28,42 @@
             </section>
             <section class="cards">
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1088404-unsplash.jpg" alt="" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-1088404-unsplash.jpg" alt="Фотография замка" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаевск</h2>
                         <div class="cards__item-info-btn page__button"></div>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1404681-unsplash.jpg" alt="" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-1404681-unsplash.jpg" alt="Фотографии горы Эльбрус" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
                         <div class="cards__item-info-btn page__button"></div>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1556355-unsplash.jpg" alt="" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-1556355-unsplash.jpg" alt="Фотография гор Домбай" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
                         <div class="cards__item-info-btn page__button"></div>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-3-unsplash.jpg" alt="" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-3-unsplash.jpg" alt="Фотография горы Эльбрус" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
                         <div class="cards__item-info-btn page__button"></div>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-4-unsplash.jpg" alt="" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-4-unsplash.jpg" alt="Фотография гор Домбай" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
                         <div class="cards__item-info-btn page__button"></div>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="Фотография замка" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаево-Ч...</h2>
                         <div class="cards__item-info-btn page__button"></div>
@@ -71,6 +71,19 @@
                 </div>
             </section>
         </main>
+        <div class="popup popup__active">
+            <div class="popup__container">
+                <div class="popup__container-info">
+                    <h2 class="popup__container-title">Редактировать профиль</h2>
+                    <form action="" class="popup__container-form">
+                        <input type="text" class="popup__container-input" placeholder="Жак-Ив Кусто">
+                        <input type="text" class="popup__container-input" placeholder="Исследователь океана">
+                        <button class="popup__container-btn page__button" type="submit">Сохранить</button>
+                    </form>
+                </div>
+                <div class="popup__close-icon page__button"></div>
+            </div>
+        </div>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
