--- a/index.html
+++ b/index.html
@@ -20,68 +20,66 @@
                 <div class="profile__info">
                     <div class="profile__info-header">
                         <h1 class="profile__info-header-title">Жак-Ив Кусто</h1>
-                        <div class="profile__info-header-btn page__button"></div>
+                        <button class="profile__info-header-btn page__button" type="button"></button>
                     </div>
                     <p class="profile__info-job">Исследователь океана</p>
                 </div>
-                <div class="profile__info-btn page__button"></div>
+                <button class="profile__info-btn page__button" type="button"></button>
             </section>
             <section class="cards">
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-1088404-unsplash.jpg" alt="Фотография замка" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаевск</h2>
-                        <div class="cards__item-info-btn page__button"></div>
+                        <button class="cards__item-info-btn cards__item-info-btn_active"></button>
                     </div>
                 </div>
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-1404681-unsplash.jpg" alt="Фотографии горы Эльбрус" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
-                        <div class="cards__item-info-btn page__button"></div>
+                        <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-1556355-unsplash.jpg" alt="Фотография гор Домбай" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
-                        <div class="cards__item-info-btn page__button"></div>
+                        <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-3-unsplash.jpg" alt="Фотография горы Эльбрус" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
-                        <div class="cards__item-info-btn page__button"></div>
+                        <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-4-unsplash.jpg" alt="Фотография гор Домбай" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
-                        <div class="cards__item-info-btn page__button"></div>
+                        <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="Фотография замка" class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаево-Ч...</h2>
-                        <div class="cards__item-info-btn page__button"></div>
+                        <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
             </section>
         </main>
-        <div class="popup popup__active">
+        <div class="popup">
             <div class="popup__container">
-                <div class="popup__container-info">
                     <h2 class="popup__container-title">Редактировать профиль</h2>
-                    <form action="" class="popup__container-form">
-                        <input type="text" class="popup__container-input" placeholder="Жак-Ив Кусто">
-                        <input type="text" class="popup__container-input" placeholder="Исследователь океана">
-                        <button class="popup__container-btn page__button" type="submit">Сохранить</button>
+                    <form action="/changeProfile" class="popup__container-form" name="changeProfile">
+                        <input type="text" class="popup__container-input" value="Жак-Ив Кусто" name="profileName" placeholder="Введите имя">
+                        <input type="text" class="popup__container-input" value="Исследователь океана" name="profileJob" placeholder="Введите профессию">
+                        <button class="popup__container-btn" type="submit">Сохранить</button>
                     </form>
-                </div>
-                <div class="popup__close-icon page__button"></div>
+                <button class="popup__close-icon page__button"></button>
             </div>
         </div>
         <footer class="footer">
