--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+        </footer>
         <div class="popup">
             <div class="popup__container">
                     <h2 class="popup__container-title">Редактировать профиль</h2>
                     <form action="/changeProfile" class="popup__container-form" name="changeProfile">
-                        <input type="text" class="popup__container-input" value="Жак-Ив Кусто" name="profileName" placeholder="Введите имя">
-                        <input type="text" class="popup__container-input" value="Исследователь океана" name="profileJob" placeholder="Введите профессию">
+                        <input type="text" class="popup__container-input" name="profileName" placeholder="Введите имя">
+                        <input type="text" class="popup__container-input" name="profileJob" placeholder="Введите профессию">
                         <button class="popup__container-btn" type="submit">Сохранить</button>
                     </form>
                 <button class="popup__close-icon page__button"></button>
             </div>
         </div>
-        <footer class="footer">
-            <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
-        </footer>
     </div>
 </body>
 </html>
