--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body class="body">
     <div class="page">
         <header class="header">
@@ -16,54 +18,60 @@
         </header>
         <main class="main">
             <section class="profile">
-                <img src="./images/profile/ava.jpg" alt="Аватар профиля" class="profile__logo">
                 <div class="profile__info">
-                    <div class="profile__info-header">
-                        <h1 class="profile__info-header-title">Жак-Ив Кусто</h1>
-                        <button class="profile__info-header-btn page__button" type="button"></button>
+                    <img class="profile__logo" src="./images/profile/ava.jpg" alt="Фотография профиля">
+                    <div class="profile__info-content">
+                        <h1 class="profile__info-content-title">Жак-Ив Кусто</h1>
+                        <button class="profile__info-content-btn page__button" type="button"></button>
+                        <p class="profile__info-content-job">Исследователь океана</p>
                     </div>
-                    <p class="profile__info-job">Исследователь океана</p>
                 </div>
-                <button class="profile__info-btn page__button" type="button"></button>
+                <button class="profile__btn page__button" type="button"></button>
             </section>
             <section class="cards">
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1088404-unsplash.jpg" alt="Фотография замка" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-1088404-unsplash.jpg" alt="Фотография замка"
+                        class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаевск</h2>
                         <button class="cards__item-info-btn cards__item-info-btn_active"></button>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1404681-unsplash.jpg" alt="Фотографии горы Эльбрус" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-1404681-unsplash.jpg" alt="Фотографии горы Эльбрус"
+                        class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
                         <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1556355-unsplash.jpg" alt="Фотография гор Домбай" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-1556355-unsplash.jpg" alt="Фотография гор Домбай"
+                        class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
                         <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-3-unsplash.jpg" alt="Фотография горы Эльбрус" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-3-unsplash.jpg" alt="Фотография горы Эльбрус"
+                        class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
                         <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-4-unsplash.jpg" alt="Фотография гор Домбай" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-4-unsplash.jpg" alt="Фотография гор Домбай"
+                        class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
                         <button class="cards__item-info-btn"></button>
                     </div>
                 </div>
                 <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="Фотография замка" class="cards__item-img">
+                    <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="Фотография замка"
+                        class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаево-Ч...</h2>
                         <button class="cards__item-info-btn"></button>
@@ -76,15 +84,16 @@
         </footer>
         <div class="popup">
             <div class="popup__container">
-                    <h2 class="popup__container-title">Редактировать профиль</h2>
-                    <form action="/changeProfile" class="popup__container-form" name="changeProfile">
-                        <input type="text" class="popup__container-input" name="profileName" placeholder="Введите имя">
-                        <input type="text" class="popup__container-input" name="profileJob" placeholder="Введите профессию">
-                        <button class="popup__container-btn" type="submit">Сохранить</button>
-                    </form>
+                <h2 class="popup__container-title">Редактировать профиль</h2>
+                <form action="/changeProfile" class="popup__container-form" name="changeProfile">
+                    <input type="text" class="popup__container-input" name="profileName" placeholder="Введите имя">
+                    <input type="text" class="popup__container-input" name="profileJob" placeholder="Введите профессию">
+                    <button class="popup__container-btn" type="submit">Сохранить</button>
+                </form>
                 <button class="popup__close-icon page__button"></button>
             </div>
         </div>
     </div>
 </body>
+
 </html>
