--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <a href="#" class="header__logo">
+            <a class="header__logo">
                 <img src="./images/header/logo.svg" alt="Логотип сайта" class="header__logo-img">
             </a>
         </header>
@@ -34,7 +34,7 @@
                         class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаевск</h2>
-                        <button class="cards__item-info-btn cards__item-info-btn_active"></button>
+                        <button class="cards__item-info-btn cards_active" type="button"></button>
                     </div>
                 </div>
                 <div class="cards__item">
@@ -42,7 +42,7 @@
                         class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
-                        <button class="cards__item-info-btn"></button>
+                        <button class="cards__item-info-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="cards__item">
@@ -50,7 +50,7 @@
                         class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
-                        <button class="cards__item-info-btn"></button>
+                        <button class="cards__item-info-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="cards__item">
@@ -58,7 +58,7 @@
                         class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Гора Эльбрус</h2>
-                        <button class="cards__item-info-btn"></button>
+                        <button class="cards__item-info-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="cards__item">
@@ -66,15 +66,15 @@
                         class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Домбай</h2>
-                        <button class="cards__item-info-btn"></button>
+                        <button class="cards__item-info-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="cards__item">
                     <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="Фотография замка"
                         class="cards__item-img">
                     <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Карачаево-Ч...</h2>
-                        <button class="cards__item-info-btn"></button>
+                        <h2 class="cards__item-info-title">Карачаево-Домбай</h2>
+                        <button class="cards__item-info-btn" type="button"></button>
                     </div>
                 </div>
             </section>
@@ -90,7 +90,7 @@
                     <input type="text" class="popup__container-input" name="profileJob" placeholder="Введите профессию">
                     <button class="popup__container-btn" type="submit">Сохранить</button>
                 </form>
-                <button class="popup__close-icon page__button"></button>
+                <button class="popup__close-icon page__button" type="button"></button>
             </div>
         </div>
     </div>
