--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         class="cards__item-img">
                     <div class="cards__item-info">
                         <h2 class="cards__item-info-title">Карачаевск</h2>
-                        <button class="cards__item-info-btn cards_active" type="button"></button>
+                        <button class="cards__item-info-btn cards__item-info-btn_active" type="button"></button>
                     </div>
                 </div>
                 <div class="cards__item">
