--- a/index.html
+++ b/index.html
@@ -29,71 +29,42 @@
                 <button class="profile__btn page__button" type="button"></button>
             </section>
             <section class="cards">
-                <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1088404-unsplash.jpg" alt="Фотография замка"
-                        class="cards__item-img">
-                    <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Карачаевск</h2>
-                        <button class="cards__item-info-btn cards__item-info-btn_active" type="button"></button>
-                    </div>
-                </div>
-                <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1404681-unsplash.jpg" alt="Фотографии горы Эльбрус"
-                        class="cards__item-img">
-                    <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Гора Эльбрус</h2>
-                        <button class="cards__item-info-btn" type="button"></button>
-                    </div>
-                </div>
-                <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-1556355-unsplash.jpg" alt="Фотография гор Домбай"
-                        class="cards__item-img">
-                    <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Домбай</h2>
-                        <button class="cards__item-info-btn" type="button"></button>
-                    </div>
-                </div>
-                <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-3-unsplash.jpg" alt="Фотография горы Эльбрус"
-                        class="cards__item-img">
-                    <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Гора Эльбрус</h2>
-                        <button class="cards__item-info-btn" type="button"></button>
-                    </div>
-                </div>
-                <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-4-unsplash.jpg" alt="Фотография гор Домбай"
-                        class="cards__item-img">
-                    <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Домбай</h2>
-                        <button class="cards__item-info-btn" type="button"></button>
-                    </div>
-                </div>
-                <div class="cards__item">
-                    <img src="./images/cards/kirill-pershin-6-unsplash.jpg" alt="Фотография замка"
-                        class="cards__item-img">
-                    <div class="cards__item-info">
-                        <h2 class="cards__item-info-title">Карачаево-Домбай</h2>
-                        <button class="cards__item-info-btn" type="button"></button>
-                    </div>
-                </div>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
-        <div class="popup">
+        <div class="popup" id="popup__profile">
             <div class="popup__container">
                 <h2 class="popup__container-title">Редактировать профиль</h2>
                 <form action="/changeProfile" class="popup__container-form" name="changeProfile">
-                    <input type="text" class="popup__container-input" name="profileName" placeholder="Введите имя">
-                    <input type="text" class="popup__container-input" name="profileJob" placeholder="Введите профессию">
+                    <input type="text" class="popup__container-input" id="profileName" name="profileName" placeholder="Введите имя" minlength="3">
+                    <input type="text" class="popup__container-input" id="profileJob" name="profileJob" placeholder="Введите профессию" minlength="3">
                     <button class="popup__container-btn" type="submit">Сохранить</button>
                 </form>
-                <button class="popup__close-icon page__button" type="button"></button>
+                <button class="popup__close-icon page__button" id="close__edit-icon" type="button"></button>
+            </div>
+        </div>
+
+        <div class="popup" id="popup__place">
+            <div class="popup__container">
+                <h2 class="popup__container-title">Новое место</h2>
+                <form action="/changeProfile" class="popup__container-form" name="changeProfile">
+                    <input type="text" class="popup__container-input" id="placeName" name="placeName" placeholder="Название" minlength="3">
+                    <input type="text" class="popup__container-input" id="imgLink" name="imgLink" placeholder="Ссылка на картинку" minlength="3">
+                    <button class="popup__container-btn" type="submit">Создать</button>
+                </form>
+                <button class="popup__close-icon page__button" id="close__place-icon" type="button"></button>
+            </div>
+        </div>
+
+        <div class="popup" id="popup__photo">
+            <div class="popup__content">
+                <button class="popup__close-icon page__button" id="close__photo-icon" type="button"></button>
             </div>
         </div>
     </div>
+    <script src="./src/script.js"></script>
 </body>
 
 </html>
