--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="popup" id="popup__profile">
             <div class="popup__container">
                 <h2 class="popup__container-title">Редактировать профиль</h2>
-                <form action="/changeProfile" class="popup__container-form" name="changeProfile">
-                    <input type="text" class="popup__container-input" id="profileName" name="profileName" placeholder="Введите имя" minlength="3">
-                    <input type="text" class="popup__container-input" id="profileJob" name="profileJob" placeholder="Введите профессию" minlength="3">
+                <form action="/changeProfile" class="popup__container-form" name="changeProfile" id="profileForm">
+                    <input type="text" class="popup__container-input" id="profileName" name="profileName" placeholder="Введите имя" required>
+                    <input type="text" class="popup__container-input" id="profileJob" name="profileJob" placeholder="Введите профессию" required>
                     <button class="popup__container-btn" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__close-icon page__button" id="close__edit-icon" type="button"></button>
@@ -49,9 +49,9 @@
         <div class="popup" id="popup__place">
             <div class="popup__container">
                 <h2 class="popup__container-title">Новое место</h2>
-                <form action="/changeProfile" class="popup__container-form" name="changeProfile">
-                    <input type="text" class="popup__container-input" id="placeName" name="placeName" placeholder="Название" minlength="3">
-                    <input type="text" class="popup__container-input" id="imgLink" name="imgLink" placeholder="Ссылка на картинку" minlength="3">
+                <form action="/changeProfile" class="popup__container-form" name="placeForm" id="placeFrom">
+                    <input type="text" class="popup__container-input" id="placeName" name="placeName" placeholder="Название" required>
+                    <input type="text" class="popup__container-input" id="imgLink" name="imgLink" placeholder="Ссылка на картинку" required>
                     <button class="popup__container-btn" type="submit">Создать</button>
                 </form>
                 <button class="popup__close-icon page__button" id="close__place-icon" type="button"></button>
