--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 <button class="profile__btn page__button" type="button"></button>
             </section>
             <section class="cards">
+                <template class="cards__item">
+                    <img src="" alt=""
+                        class="cards__item-img">
+                    <button class="cards__item-trash" id="cards__trash" type="button"></button>
+                    <div class="cards__item-info">
+                        <h2 class="cards__item-info-title"></h2>
+                        <button class="cards__item-info-btn" id="cards__like" type="button"></button>
+                    </div>
+                </template>
             </section>
         </main>
         <footer class="footer">
@@ -60,6 +69,8 @@
 
         <div class="popup" id="popup__photo">
             <div class="popup__content">
+                <img class="popup__content-img" src="" alt="">
+                <p class="popup__content-text"></p>
                 <button class="popup__close-icon page__button" id="close__photo-icon" type="button"></button>
             </div>
         </div>
