--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="body">
     <div class="page">
         <header class="header">
             <a class="header__logo">
-                <img src="./images/header/logo.svg" alt="Логотип сайта" class="header__logo-img">
+                <img src="<%=require('./images/header/logo.svg')%>" alt="Логотип сайта" class="header__logo-img">
             </a>
         </header>
         <main class="main">
             <section class="profile">
                 <div class="profile__info">
-                    <img class="profile__logo" src="./images/profile/ava.jpg" alt="Фотография профиля">
+                    <img class="profile__logo" src="<%=require('./images/profile/ava.jpg')%>" alt="Фотография профиля">
                     <div class="profile__info-content">
                         <h1 class="profile__info-content-title">Жак-Ив Кусто</h1>
                         <button class="profile__info-content-btn page__button" type="button"></button>
@@ -49,9 +48,11 @@
                 <h2 class="popup__container-title">Редактировать профиль</h2>
                 <form action="/changeProfile" class="popup__container-form" name="changeProfile" id="profileForm">
                     <input type="text" class="popup__container-input" id="profileName" name="profileName"
-                        placeholder="Введите имя" required>
+                        placeholder="Введите имя" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$" data-profile-error="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+                        <span class="profileName-error"></span>
                     <input type="text" class="popup__container-input" id="profileJob" name="profileJob"
-                        placeholder="Введите профессию" required>
+                        placeholder="Введите профессию" minlength="2" maxlength="200" pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$" data-profile-error="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+                        <span class="profileJob-error"></span>
                     <button class="popup__container-btn" type="submit">Сохранить</button>
                 </form>
                 <button class="popup__close-icon page__button" id="close__edit-icon" type="button"></button>
@@ -63,9 +64,11 @@
                 <h2 class="popup__container-title">Новое место</h2>
                 <form action="/changeProfile" class="popup__container-form" name="placeForm" id="placeFrom">
                     <input type="text" class="popup__container-input" id="placeName" name="placeName"
-                        placeholder="Название" required>
-                    <input type="text" class="popup__container-input" id="imgLink" name="imgLink"
+                        placeholder="Название" minlength="2" maxlength="30" required>
+                        <span class="placeName-error"></span>
+                    <input type="url" class="popup__container-input" id="imgLink" name="imgLink"
                         placeholder="Ссылка на картинку" required>
+                        <span class="imgLink-error"></span>
                     <button class="popup__container-btn" type="submit">Создать</button>
                 </form>
                 <button class="popup__close-icon page__button" id="close__place-icon" type="button"></button>
@@ -80,7 +83,6 @@
             </div>
         </div>
     </div>
-    <script src="./src/script.js"></script>
 </body>
 
 </html>
