--- a/src/index.html
+++ b/src/index.html
@@ -64,12 +64,12 @@
                 <h2 class="popup__container-title">Новое место</h2>
                 <form action="/changeProfile" class="popup__container-form" name="placeForm" id="placeFrom">
                     <input type="text" class="popup__container-input" id="placeName" name="placeName"
-                        placeholder="Название" minlength="2" maxlength="30" required>
+                        placeholder="Название" pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$" data-profile-error="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" minlength="2" maxlength="30" required>
                         <span class="placeName-error"></span>
                     <input type="url" class="popup__container-input" id="imgLink" name="imgLink"
                         placeholder="Ссылка на картинку" required>
                         <span class="imgLink-error"></span>
-                    <button class="popup__container-btn" type="submit">Создать</button>
+                    <button class="popup__container-btn popup__container-btn_disabled" type="submit">Создать</button>
                 </form>
                 <button class="popup__close-icon page__button" id="close__place-icon" type="button"></button>
             </div>
