--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                     <input type="url" class="popup__container-input" id="imgLink" name="imgLink"
                         placeholder="Ссылка на картинку" required>
                         <span class="imgLink-error"></span>
-                    <button class="popup__container-btn popup__container-btn_disabled" type="submit">Создать</button>
+                    <button class="popup__container-btn" type="submit">Создать</button>
                 </form>
                 <button class="popup__close-icon page__button" id="close__place-icon" type="button"></button>
             </div>
